Added hanging indent to Affix nav.

--- a/features.html
+++ b/features.html
@@ -3212,6 +3212,7 @@
                                     <li><a href="#text-lead-text">Lead Text</a></li>
                                     <li><a href="#text-blockquotes-text">Blockquotes</a></li>
                                     <li><a href="#text-reverse-blockquotes-text">Reverse Blockquotes</a></li>
+                                    <li><a href="#text-hanging-indent-text">Hanging Indent</a></li>
                                     <li><a href="#text-alignment-text">Text Alignment</a></li>
                                     <li><a href="#text-color-text">Text Color</a></li>
                                     <li><a href="#text-background-text">Text Background</a></li>
