Fixes for site navigation styles and examples.
Removed styles to shrink and de-emphasize site navigation links.
Updated examples site navigation to work well in new styling.

--- a/hero-slideshow.html
+++ b/hero-slideshow.html
@@ -98,18 +98,18 @@
                         <li><a href="features.html">Feature Sheet</a></li>
                         <li><a href="hero-slideshow.html">Hero Slideshow</a></li>
                         <li><a href="top-affix.html">Top Affix</a></li>
-                        <li><a href="one-column.html">One Column</a></li>
-                        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Two Column Left <span class="caret"></span></a>
+                        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Layout Examples <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="two-column-left.html">Standard</a></li>
+                                <li><a href="one-column.html">One Column</a></li>
+                                <li><a href="two-column-left.html">Two Column Left</a></li>
                                 <li><a href="two-column-left-toplinks.html">Masthead Links</a></li>
                                 <li><a href="two-column-left-hero-2.html">Second Level Hero</a></li>
                                 <li><a href="two-column-left-footer.html">3-Column Footer</a></li>
                                 <li><a href="two-column-left-footer-grey.html">Grey Footer</a></li>
+                                <li><a href="two-column-right.html">Two Column Right</a></li>
+                                <li><a href="three-column.html">Three Column</a></li>
                             </ul>
                         </li>
-                        <li><a href="two-column-right.html">Two Column Right</a></li>
-                        <li><a href="three-column.html">Three Column</a></li>
                     </ul>
                 </div>
             </div>
