Removed superfluous affix and data-spy calls.

--- a/hero-slideshow.html
+++ b/hero-slideshow.html
@@ -30,7 +30,7 @@
             .panel-footer pre.prettyprint, .list-group-item-shaded pre.prettyprint { border: 0; }
         </style>
     </head>
-    <body data-spy="scroll" data-target="#affix-nav">
+    <body>
         <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
 
         <!-- ON CANVAS CONTENT
