--- a/one-column.html
+++ b/one-column.html
@@ -23,7 +23,7 @@
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <!--[if IE 10]><script src="assets/js/ie10-viewport.min.js"></script><![endif]-->
     </head>
-    <body data-spy="scroll" data-target="#affix-nav">
+    <body>
         <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
 
         <!-- ON CANVAS CONTENT
