--- a/two-column-left-hero-2.html
+++ b/two-column-left-hero-2.html
@@ -26,7 +26,7 @@
             #hero { background-image: url(images/hero/about-nmsu.jpg); }
         </style>
     </head>
-    <body data-spy="scroll" data-target="#affix-nav">
+    <body>
         <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
 
         <!-- ON CANVAS CONTENT
