--- a/features.html
+++ b/features.html
@@ -62,7 +62,7 @@
                                     <img id="logo_tagline" src="assets/images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
                                 </a>
                                 <a href="/"> 
-                                    <small>Department Name</small>
+                                    <small>University Communications Branding Initiative</small>
                                 </a>
                             </div>
                         </div>
@@ -87,7 +87,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="assets/images/logo-mobile-white.png" alt="NMSU Logo"/></a>
+                    <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="assets/images/logo-mobile-white-3.png" alt="NMSU Logo"/></a>
+                    <a href="/" class="navbar-dept visible-xs">
+                      	<small>University Communications Branding Initiative</small>
+                    </a>
                 </div>
                 <div class="collapse navbar-collapse" id="main-navigation-options">
                     <div id="search-stack"> 
