Added unit name to mobile view.  Renamed sharpened mobile logo.

--- a/template.html
+++ b/template.html
@@ -43,7 +43,7 @@
                                 <a href="//nmsu.edu">
                                     <img id="logo_tagline" src="assets/images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
                                 </a>
-                                <!-- Uncomment for Unit-level Site
+                                <!-- Uncomment and Replace Name here and in Primary Navbar (#main-navigation) for Unit-level Site
                                 <a href="/"> 
                                     <small>Department Name</small>
                                 </a>
@@ -73,6 +73,11 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="assets/images/logo-mobile-white.png" alt="NMSU Logo"/></a>
+                    <!--  Uncomment and Replace Name here and in Masthead for Unit-level Site
+                    <a href="/" class="navbar-dept visible-xs">
+                      	<small>Department Name</small>
+                    </a>
+                    -->
                 </div>
                 <div class="collapse navbar-collapse" id="main-navigation-options">
                     <div id="search-stack"> 
