--- a/two-column-left-toplinks.html
+++ b/two-column-left-toplinks.html
@@ -73,7 +73,7 @@
                                     <img id="logo_tagline" src="assets/images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
                                 </a>
                                 <a href="#">
-                                    <small>Brand Identity Program</small>
+                                    <small>University Communications Branding Initiative</small>
                                 </a>
                             </div>
                         </div>
@@ -100,6 +100,9 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="assets/images/logo-mobile-white.png" alt="NMSU Logo"/></a>
+                    <a href="/" class="navbar-dept visible-xs">
+                      	<small>University Communications Branding Initiative</small>
+                    </a>
                 </div>
                 <div class="collapse navbar-collapse" id="main-navigation-options">
                     <div id="search-stack" class="offset-top-10"> 
