--- a/new-header.html
+++ b/new-header.html
@@ -38,15 +38,15 @@
                     </button>
                     <div id="navbar-brand" class="navbar-brand padded-15" style="height: auto;">
                         <a href="/">
-                            <img src="assets/images/logov2b_90.png" alt="NMSU Logo" class="hidden-xs" id="masthead-logo">
-                            <img src="assets/images/logo-mobile-white.png" class="visible-xs" alt="NMSU Logo">
+                            <img src="assets/images/logov2b_90.png" alt="NMSU Logo" class="hidden-xs" id="nmsu-logo" id="masthead-logo">
+                            <img src="assets/images/logo-mobile-white.png" class="visible-xs" id="nmsu-logo-xs" alt="NMSU Logo">
                         </a>
                     </div>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="border:none; box-shadow: none; -webkit-box-shadow: none;">
-                    <form action="//www.nmsu.edu/search_results.php" method="POST" id="site-search" class="form-search navbar-form navbar-right" role="search" style="border:none; padding:5px 15px; box-shadow: none; -webkit-box-shadow: none;">
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="border:none; box-shadow: none; -webkit-box-shadow: none; padding:5px 15px">
+                    <form action="//www.nmsu.edu/search_results.php" method="POST" id="site-search" class="form-search navbar-form navbar-right" role="search" style="border:none; box-shadow: none; -webkit-box-shadow: none;">
                         <div class="form-group has-feedback" role="search">
                             <label class="sr-only" for="search-query">Search</label>
                             <input name="q" type="text" id="search-query" title="Site Search" class="form-control" placeholder="Type a Keyword">
@@ -188,12 +188,46 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="assets/js/bootstrap.min.js"></script>
         <script>
-            $(window).one("scroll", function(event) {
-                $("#masthead-logo").attr("src","assets/images/logo-mobile-white.png");
+            function scroll_shrink(event) {
+                $("#nmsu-logo").finish()
+                    .animate({
+                        width: 270,
+                        height: 28
+                    }, {
+                        duration: 300,
+                        queue: false,
+                        complete: function() {
+                            $("#nmsu-logo").attr("src","assets/images/logo-mobile-white.png")
+                                .css({"width": "", "height": ""});
+                        }
+                    });
                 $("body").removeClass("fix-top");
-                $("body").addClass("fix-top-scroll");
-                console.log("scroll");
-            });
+                $("body").addClass("fix-top-scroll");  
+                $(window).on("scroll", scroll_grow);
+            };
+            function scroll_grow(event) {
+                if ($(window).scrollTop() === 0) {
+                    $("#nmsu-logo").finish()
+                        .attr("src", "assets/images/logov2b_90.png")
+                        .css({"width": "270", "height": "28"})
+                        .animate({
+                            width: 427,
+                            height: 90
+                        }, {
+                            duration: 300,
+                            queue: false,
+                            complete: function() {
+                                $("#nmsu-logo").attr("src","assets/images/logov2b_90.png")
+                                    .css({"width": "", "height": ""});
+                            }
+                        });
+                    $("body").removeClass("fix-top-scroll");
+                    $("body").addClass("fix-top");
+                    $(window).off("scroll", event);
+                    $(window).one("scroll", scroll_shrink);
+                }
+            }
+            $(window).one("scroll", scroll_shrink);
         </script>
     </body>
 </html>
