Quick fix for logo padding in smallest viewports.

--- a/new-header.html
+++ b/new-header.html
@@ -38,9 +38,9 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <div id="navbar-brand" class="navbar-brand" style="height: auto; padding: 15px 0;">
+                            <div id="navbar-brand" class="navbar-brand padded-15" style="height: auto;">
                                 <a href="/" style="display: block;">
-                                    <img src="assets/images/logov2b_90.png" alt="NMSU Logo" class="hidden-xs" id="nmsu-logo" id="masthead-logo" style="padding-left: 15px;">
+                                    <img src="assets/images/logov2b_90.png" alt="NMSU Logo" class="hidden-xs" id="nmsu-logo" id="masthead-logo">
                                     <img src="assets/images/logo-mobile-white.png" class="visible-xs" id="nmsu-logo-xs" alt="NMSU Logo">
                                 </a>
                                 <a href="/" class="dept-name" id="navbar-dept-link" style="display: block;">
